--- a/index.html
+++ b/index.html
@@ -71,13 +71,8 @@ and open the template in the editor.
   <br>
   <video width="320" height="240" controls>
   <source src="images/rubija.mp4" type="video/mp4">
-</video>
-  <p> </p> 
-  <p> </p> 
+</video><br>
   <img src="images/video.png" class="img-responsive margin" style="display:inline" alt="tags div" width="1000" height="200">
-    <p> </p> 
-  
-
   <div class="row">
     <div class="col-sm-4">
       <p> </p>
