--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ and open the template in the editor.
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">&lt;div&gt;</a></li>
-        <li><a href="#">&lt;span&gt;</a></li>
+        <li><a href="#span">&lt;span&gt;</a></li>
         <li><a href="#">&lt;video&gt;</a></li>
       </ul>
     </div>
@@ -54,6 +54,7 @@ and open the template in the editor.
 
 
 <!-- Second Container -->
+<a id="span">
 <div class="container-fluid bg-2 text-center">
   <h3 class="margin">HTML &lt;span&gt; tags</h3>
  <img src="images/span.png" class="img-responsive margin" style="display:inline" alt="tags div" width="1500" height="350">
