--- a/index.html
+++ b/index.html
@@ -36,15 +36,16 @@ and open the template in the editor.
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">&lt;div&gt;</a></li>
+        <li><a href="#div">&lt;div&gt;</a></li>
         <li><a href="#span">&lt;span&gt;</a></li>
-        <li><a href="#">&lt;video&gt;</a></li>
+        <li><a href="#video">&lt;video&gt;</a></li>
       </ul>
     </div>
   </div>
 </nav>
 
 <!-- First Container -->
+<a id="div">
 <div class="container-fluid bg-1 text-center">
   <h3 class="margin">HTML &lt;div&gt; tags</h3>
   <img src="images/div..png" class="img-responsive margin" style="display:inline" alt="tags div" width="1500" height="350">
@@ -65,6 +66,7 @@ and open the template in the editor.
 </div>
 
 <!-- Third Container (Grid) -->
+<a id="video">
 <div class="container-fluid bg-3 text-center">    
   <h3 class="margin">HTML &lt;video&gt; tags</h3><br>
   <p>Tagu video izmanto, lai ievietotu video saturu dokumentā, piemēram, filmas klipā vai citās video straumēs. Teksts starp tagiem video un video tiks parādīts tikai tajās pārlūkprogrammās, kas neatbalsta elementu video. HTML formātā ir trīs atbalstīti video formāti: MP4, WebM un OGG.</p>
