--- a/index.html
+++ b/index.html
@@ -23,7 +23,18 @@ and open the template in the editor.
 </style>
 </head>
 <body>
-
+<script>
+    window.onscroll = function() {myFunction()};
+    var navbar = document.getElementById("navbar");
+    var sticky = navbar. offsetTop;
+    function myFunction(){
+        if (windiw.pageYOffset >= sticky){
+            navbar.classList.add("sticky");
+        }else{
+            navbar.classList.remove("sticky");
+        }
+    }
+    </script>
 <!-- Navbar -->
 <nav class="navbar navbar-default">
   <div class="container">
