--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ and open the template in the editor.
 </head>
 <body>
 <script>
-    window.onscroll = function() {myFunction()};
+    window.onscroll = function() {myFunction();};
     var navbar = document.getElementById("navbar");
     var sticky = navbar. offsetTop;
     function myFunction(){
