--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ and open the template in the editor.
     var navbar = document.getElementById("navbar");
     var sticky = navbar. offsetTop;
     function myFunction(){
-        if (windiw.pageYOffset >= sticky){
+        if (window.pageYOffset >= sticky){
             navbar.classList.add("sticky");
         }else{
             navbar.classList.remove("sticky");
