--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ and open the template in the editor.
 <script>
     window.onscroll = function() {myFunction();};
     var navbar = document.getElementById("navbar");
-    var sticky = navbar. offsetTop;
+    var sticky = myNavbar.offsetTop;
     function myFunction(){
         if (window.pageYOffset >= sticky){
             navbar.classList.add("sticky");
