--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ and open the template in the editor.
 <body>
 <script>
     window.onscroll = function() {myFunction();};
-    var navbar = document.getElementById("navbar");
+    var navbar = index.getElementById("myNavbar");
     var sticky = myNavbar.offsetTop;
     function myFunction(){
         if (window.pageYOffset >= sticky){
