--- a/laukums.html
+++ b/laukums.html
@@ -19,7 +19,11 @@ and open the template in the editor.
     <script>
         function izveidoLaukumu(n){
             console.log("nananana");
-            console.log(n);    
+            console.log(n); 
+            var i;
+            for (i=0; i<n;i++){
+               <button class="poga"></button> 
+            }
             }
     </script>
     </body>
