--- a/laukums.html
+++ b/laukums.html
@@ -23,7 +23,7 @@ and open the template in the editor.
             console.log(n); 
             var i;
             for (i=0; i<n;i++){
-               <button class="poga">cav</button>;
+               <button class="poga">poga</button>;
             }
             }
     </script>
