--- a/laukums.html
+++ b/laukums.html
@@ -23,8 +23,20 @@ and open the template in the editor.
             console.log(n); 
             var i;
             for (i=0; i<n;i++){
-               <button class="poga">poga</button>;
+               <button type="button" class="poga">poga</button>;
             }
+            <!--
+            for(i = 0; i < n; i++) {
+                var button = document.createElement("button");
+                button.innerHTML = Chapter[i];
+                button.className = "btn btn-outline-success";
+                var buttonDiv = document.getElementById("buttons");
+                buttonDiv.appendChild(button);
+            }
+            var buttonDiv = document.getElementById("buttons"); for(var i = 1; i <= 10; i++) { 
+                buttonDiv.innerHTML += '<button type="button" class="btn btn-outline-success">Chapter['+i+']</button>';
+            }
+            -->
             }
     </script>
     </body>
