--- a/laukums.html
+++ b/laukums.html
@@ -16,7 +16,6 @@ and open the template in the editor.
         <label for="fname">Ievadi skaitli:</label><br>
         <input value="4" type="number" id="quantity" name="quantity" min="1" max="5">
         <input type = "button" onclick="izveidoLaukumu(quantity.value)" value="Uzģenerē laukumu">
-        <input type="button" value="Click me" onclick="msg()">
     </form> 
     <script>
         function izveidoLaukumu(n){
@@ -24,7 +23,7 @@ and open the template in the editor.
             console.log(n); 
             var i;
             for (i=0; i<n;i++){
-                var button = document.createElement("button");
+                <button class="button">poga</button>
                }
             }
     </script>
