--- a/laukums.html
+++ b/laukums.html
@@ -24,14 +24,16 @@ and open the template in the editor.
             var i;
             for (i=0; i<n;i++){
                 for (var m=0; m<n;m++){
-                var x = document.createElement("BUTTON");
-                x.className = 'button';
-                var t = document.createTextNode("");
-                x.appendChild(t);
-                document.body.appendChild(x);
+                    var x = document.createElement("BUTTON");
+                    x.className = 'button';
+                    var t = document.createTextNode("");
+                    x.appendChild(t);
+                    document.body.appendChild(x);
                 }
+                var nextline = document.createElement("BR");
+                x.appendChild(br);
             }
-            }
+        }
     </script>
     </body>
 </html>
