--- a/laukums.html
+++ b/laukums.html
@@ -30,7 +30,8 @@ and open the template in the editor.
                     x.appendChild(t);
                     document.body.appendChild(x);
                 }
-                
+                var br = document.createElement("br");
+                element.appendChild(br);
             }
         }
     </script>
