--- a/laukums.html
+++ b/laukums.html
@@ -31,7 +31,7 @@ and open the template in the editor.
                     document.body.appendChild(x);
                 }
                 var br = document.createElement("br");
-                element.appendChild(br);
+                x.appendChild(br);
             }
         }
     </script>
