--- a/laukums.html
+++ b/laukums.html
@@ -12,9 +12,10 @@ and open the template in the editor.
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
+        <div class="container-fluid bg-1 text-center">
         <p id="demo"></p>
     <form>
-        <label for="fname">Ievadi skaitli:</label><br>
+        <label for="fname">Ievadi skaitli: </label><br>
         <input value="4" type="number" id="quantity" name="quantity" min="1" max="5">
         <input type = "button" onclick="izveidoLaukumu(quantity.value)" value="Uzģenerē laukumu">
     </form> 
@@ -43,5 +44,6 @@ and open the template in the editor.
             "Bokseris","Ciaua","Grifons","Hofavarts","Komandors","Latvijas dzinējsuns","Mopsis"];
             document.getElementById("demo").innerHTML = dogs;
     </script>
+    </div>
     </body>
 </html>
