--- a/laukums.html
+++ b/laukums.html
@@ -17,6 +17,7 @@ and open the template in the editor.
         <label for="fname">Ievadi skaitli: </label><br>
         <input value="4" type="number" id="quantity" name="quantity" min="1" max="5">
         <input type = "button" onclick="izveidoLaukumu(quantity.value)" value="Uzģenerē laukumu">
+        <input type = "button" onclick="veidoMasivu()" value="Veido masīvu">
     </form> 
     <script>
         function izveidoLaukumu(n){
