--- a/laukums.html
+++ b/laukums.html
@@ -51,10 +51,11 @@ and open the template in the editor.
             "Šetlijs","Mudijs (Mudi)","Angļu Kokerspaniels","Bladhaunds","Miniatūrais pinčers","Samojeds","Kane korso","Šiba",
             "Angļu pointers","Erdelterjers","Levrete","Argentīnas dogs","Austrālijas Aitu suns","Basenži",
             "Bokseris","Ciaua","Grifons","Hofavarts","Komandors","Latvijas dzinējsuns","Mopsis"];
+    
     function veidoMasivu(){
     var masivs = [];
     for (var i = 0; i < dogs.length; i++) {
-        masivs.push([bilde[i]],dogs[i]);
+        masivs.push([bildes[i]],dogs[i]);
         console.log(masivs[i]);
     }
     }
