--- a/laukums.html
+++ b/laukums.html
@@ -54,7 +54,7 @@ and open the template in the editor.
     
     function veidoMasivu(){
     var masivs = [];
-    for (var i = 0; i < dogs.length; i++) {
+    for (var i = 0; i < bildes.length; i++) {
         masivs.push([bildes[i]],dogs[i]);
         console.log(masivs[i]);
     }
