--- a/laukums.html
+++ b/laukums.html
@@ -58,6 +58,7 @@ and open the template in the editor.
         masivs.push([bildes[i]],dogs[i]);
         console.log(masivs[i]);
     }
+    console.log(masivs[40]);
     }
     
     </script>
