--- a/laukums.html
+++ b/laukums.html
@@ -53,12 +53,11 @@ and open the template in the editor.
             "Bokseris","Ciaua","Grifons","Hofavarts","Komandors","Latvijas dzinējsuns","Mopsis"];
     
     function veidoMasivu(){
-    var masivs = [];
+    var masivs = [50];
     for (var i = 0; i < bildes.length; i++) {
         masivs.push([bildes[i]],dogs[i]);
         console.log(masivs[i]);
     }
-    console.log(masivs[26]);
     }
     
     </script>
