--- a/laukums.html
+++ b/laukums.html
@@ -60,7 +60,7 @@ and open the template in the editor.
             "Angļu pointers","Erdelterjers","Levrete","Argentīnas dogs","Austrālijas Aitu suns","Basenži",
             "Bokseris","Ciaua","Grifons","Hofavarts","Komandors","Latvijas dzinējsuns","Mopsis"];
     
-    function veidoMasivu(){
+    function veidoMasivu(n){
     var masivs = [];
     for (var i = 0; i < bildes.length; i++) {
         var m1 =[];
