--- a/laukums.html
+++ b/laukums.html
@@ -25,7 +25,7 @@ and open the template in the editor.
     var masivs = [];
         function izveidoLaukumu(n){
             sajauc();
-            jaunsMasivs(quantity.value);
+            jaunsMasivs(n);
             console.log("nananana");
             console.log(n); 
             var i;
@@ -40,6 +40,7 @@ and open the template in the editor.
                 for (var m=0; m<n;m++){
                     var x = document.createElement("BUTTON");
                     x.className = 'button';
+                    console.log(jauns[m+k]);
                     x.setAttribute("style","background-image: url(jauns[m+k])");
                     //var t = document.createTextNode("");
                     //x.appendChild(t);
@@ -84,7 +85,6 @@ and open the template in the editor.
     console.log(masivs[1][1]);
     }
     function jaunsMasivs(n){
-    
     var p=(n*n)/2;
         for(var r=0; r<p; r++){
             for(let s=0;i<2;s++){
