--- a/laukums.html
+++ b/laukums.html
@@ -110,7 +110,7 @@ and open the template in the editor.
             console.log(jauns.length);
     }
     
-    function sajauc(){
+    function sajaucMasivu(){
         for(var k=0;k<50;k++){
            var t=Math.floor(Math.random() * 50);
            var p=Math.floor(Math.random() * 50);
