--- a/laukums.html
+++ b/laukums.html
@@ -24,6 +24,7 @@ and open the template in the editor.
     var jauns=[];
     var masivs = [];
         function izveidoLaukumu(n){
+            veidoMasivu();
             sajaucMasivu();
             jaunsMasivs(n);
             sajaucJauns();
