--- a/laukums.html
+++ b/laukums.html
@@ -116,14 +116,14 @@ and open the template in the editor.
         for(var k=0;k<50;k++){
            var t=Math.floor(Math.random() * 50);
            var p=Math.floor(Math.random() * 50);
-           a=masivs[t][0];
-           a1=masivs[t][1];
-           b=masivs[p][0];
-           b1=masivs[p][1];
-           masivs[p][0]=a;
-           masivs[p][1]=a1
-           masivs[t][0]=b;
-           masivs[t][1]=b1;
+           a=masivs[0][t];
+           a1=masivs[1][t];
+           b=masivs[0][p];
+           b1=masivs[1][p];
+           masivs[0][p]=a;
+           masivs[1][p]=a1
+           masivs[0][t]=b;
+           masivs[1][t]=b1;
         }
     }
     
