--- a/laukums.html
+++ b/laukums.html
@@ -111,11 +111,15 @@ and open the template in the editor.
             }
             console.log(jauns.length);
     }
-    
+    var a,a1,b,b1;
     function sajaucMasivu(){
         for(var k=0;k<50;k++){
            var t=Math.floor(Math.random() * 50);
            var p=Math.floor(Math.random() * 50);
+           masivs[0][t];
+           masivs[1][t];
+           masivs[0][p];
+           masivs[1][p];
            a=masivs[0][t];
            a1=masivs[1][t];
            b=masivs[0][p];
