--- a/laukums.html
+++ b/laukums.html
@@ -116,10 +116,10 @@ and open the template in the editor.
         for(var k=0;k<50;k++){
            var t=Math.floor(Math.random() * 50);
            var p=Math.floor(Math.random() * 50);
-           masivs[0][t];
-           masivs[1][t];
-           masivs[0][p];
-           masivs[1][p];
+           conslole.log(masivs[0][t]);
+           conslole.log(masivs[1][t]);
+           conslole.log(masivs[0][p]);
+           conslole.log(masivs[1][p]);
            a=masivs[0][t];
            a1=masivs[1][t];
            b=masivs[0][p];
