--- a/laukums.html
+++ b/laukums.html
@@ -80,7 +80,6 @@ and open the template in the editor.
         masivs.push(m1);
     }
     for (var t = 0; t < masivs.length; t++) {
-        console.log(masivs[t]);
     console.log(masivs[t][0]);
     console.log(masivs[t][1]);
     }
@@ -90,7 +89,7 @@ and open the template in the editor.
     var p=(n*n)/2;
         for(var r=0; r<p; r++){
             for(let s=0;s<2;s++){
-                var a=masivs[s][r];
+                var a=masivs[r][s];
                 console.log(a);
             jauns.push(a);
             }
