--- a/laukums.html
+++ b/laukums.html
@@ -115,10 +115,10 @@ and open the template in the editor.
         for(var k=0;k<50;k++){
            var t=Math.floor(Math.random() * 50);
            var p=Math.floor(Math.random() * 50);
-           conslole.log(masivs[t][0]);
-           conslole.log(masivs[t][1]);
-           conslole.log(masivs[p][0]);
-           conslole.log(masivs[p][1]);
+           console.log(masivs[t][0]);
+           console.log(masivs[t][1]);
+           console.log(masivs[p][0]);
+           console.log(masivs[p][1]);
            a=masivs[t][0];
            a1=masivs[t][1];
            b=masivs[p][0];
