--- a/laukums.html
+++ b/laukums.html
@@ -28,8 +28,8 @@ and open the template in the editor.
             sajaucMasivu();
             jaunsMasivs(n);
             sajaucJauns();
-            console.log("nananana"); 
-            console.log(n); 
+            //console.log("nananana"); 
+            //console.log(n); 
             var i;
             var k=0;
             if(document.getElementById("laukums")!= null){
@@ -80,8 +80,8 @@ and open the template in the editor.
         masivs.push(m1);
     }
     for (var t = 0; t < masivs.length; t++) {
-    console.log(masivs[t][0]);
-    console.log(masivs[t][1]);
+    //console.log(masivs[t][0]);
+    //console.log(masivs[t][1]);
     }
     
     }
@@ -90,14 +90,14 @@ and open the template in the editor.
         for(var r=0; r<p; r++){
             for(let s=0;s<2;s++){
                 var a=masivs[r][s];
-                console.log(a);
+                //console.log(a);
             jauns.push(a);
             }
         }
         for(var i=0;i<jauns.length;i++){
-            console.log(jauns[i]);
+            //console.log(jauns[i]);
         }
-        console.log(jauns.length);
+        //console.log(jauns.length);
     }
         
         function sajaucJauns(){
@@ -108,7 +108,7 @@ and open the template in the editor.
                 jauns[i]=tmp;
                 console.log(jauns[i]);
             }
-            console.log(jauns.length);
+            //console.log(jauns.length);
     }
     var a,a1,b,b1;
     function sajaucMasivu(){
