--- a/laukums.html
+++ b/laukums.html
@@ -46,7 +46,7 @@ and open the template in the editor.
                     if(jauns[m+k].indexOf(".")>=0){
                        x.setAttribute("style","background-image: url(jauns[m+k])"); 
                     }else{
-                         x.innerHTML(jauns[m+k]);
+                         x.innerHTML=jauns[m+k];
                     }
                      //var t = document.createTextNode("");
                     //x.appendChild(t);
