--- a/laukums.html
+++ b/laukums.html
@@ -26,7 +26,7 @@ and open the template in the editor.
         function izveidoLaukumu(n){
             veidoMasivu();
             sajaucMasivu();
-            jaunsMasivs(n);
+            jaunsMasivs();
             sajaucJauns();
             //console.log("nananana"); 
             //console.log(n); 
