--- a/laukums.html
+++ b/laukums.html
@@ -26,7 +26,7 @@ and open the template in the editor.
         function izveidoLaukumu(n){
             veidoMasivu();
             sajaucMasivu();
-            jaunsMasivs();
+            jaunsMasivs(n);
             sajaucJauns();
             //console.log("nananana"); 
             //console.log(n); 
@@ -125,7 +125,7 @@ and open the template in the editor.
            b=masivs[p][0];
            b1=masivs[p][1];
            masivs[p][0]=a;
-           masivs[p][1]=a1
+           masivs[p][1]=a1;
            masivs[t][0]=b;
            masivs[t][1]=b1;
         }
