--- a/laukums.html
+++ b/laukums.html
@@ -98,9 +98,9 @@ and open the template in the editor.
             jauns.push(a);
             }
         }
-        for(var i=0;i<jauns.length;i++){
+        //for(var i=0;i<jauns.length;i++){
             //console.log(jauns[i]);
-        }
+        //}
         //console.log(jauns.length);
     }
         
