--- a/laukums.html
+++ b/laukums.html
@@ -37,7 +37,7 @@ and open the template in the editor.
             }
             var p = document.createElement("div");
             p.setAttribute("id","laukums");    
-            for (k=0; k<n;k++){
+            for (i=0; i<n;i++){
                 var y = document.createElement("div");
                 for (var m=0; m<n;m++){
                     var x = document.createElement("BUTTON");
