--- a/laukums.html
+++ b/laukums.html
@@ -91,9 +91,10 @@ and open the template in the editor.
     }
     function jaunsMasivs(n){
     var p=(n*n)/2;
+    var a;
         for(var r=0; r<p; r++){
             for(let s=0;s<2;s++){
-                var a=masivs[r][s];
+                a=masivs[r][s];
                 //console.log(a);
             jauns.push(a);
             }
