--- a/laukums.html
+++ b/laukums.html
@@ -95,7 +95,7 @@ and open the template in the editor.
         for(var r=0; r<p; r++){
             for(let s=0;s<2;s++){
                 a=masivs[r][s];
-                //console.log(a);
+                console.log(a);
             jauns.push(a);
             }
         }
