--- a/laukums.html
+++ b/laukums.html
@@ -94,7 +94,7 @@ and open the template in the editor.
     var a;
         for(var r=0; r<p; r++){
             for(let s=0;s<2;s++){
-                a=masivs[r][s];
+                a=masivs[s][r];
                 console.log(a);
             jauns.push(a);
             }
