--- a/laukums.html
+++ b/laukums.html
@@ -90,11 +90,12 @@ and open the template in the editor.
     
     }
     function jaunsMasivs(n){
+    veidoMasivu();
     var p=(n*n)/2;
     var a;
         for(var r=0; r<p; r++){
             for(let s=0;s<2;s++){
-                a=masivs[s][r];
+                a=masivs[r][s];
                 console.log(a);
             jauns.push(a);
             }
