--- a/laukums.html
+++ b/laukums.html
@@ -90,7 +90,6 @@ and open the template in the editor.
     
     }
     function jaunsMasivs(n){
-    veidoMasivu();
     var p=(n*n)/2;
     var a;
         for(var r=0; r<p; r++){
@@ -100,10 +99,7 @@ and open the template in the editor.
             jauns.push(a);
             }
         }
-        for(var i=0;i<jauns.length;i++){
-           console.log(jauns[i]);
-        }
-        console.log(jauns.length);
+        //console.log(jauns.length);
     }
         
         function sajaucJauns(){
